starting to restructure layout

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,21 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css"> 
+
+    <link href="http://demo.deviserweb.com/cv/assets/css/animate.css" rel="stylesheet">
+    <link href="http://demo.deviserweb.com/cv/assets/css/style.css" rel="stylesheet">
+    <link href="http://demo.deviserweb.com/cv/assets/css/responsive.css" rel="stylesheet">
+    <link href="http://demo.deviserweb.com/cv/assets/css/colors/lime.css" rel="stylesheet">
+    <link href="http://demo.deviserweb.com/cv/assets/css/demo.css" rel="stylesheet">
+
+    <link href="//fonts.googleapis.com/css?family=Roboto:400,100,300,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://demo.deviserweb.com/cv/assets/icons/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
 
     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script> 
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -30,7 +41,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root" class="container"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
