--- a/public/index.html
+++ b/public/index.html
@@ -4,53 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css"> 
 
-    <link href="http://demo.deviserweb.com/cv/assets/css/animate.css" rel="stylesheet">
-    <link href="http://demo.deviserweb.com/cv/assets/css/style.css" rel="stylesheet">
-    <link href="http://demo.deviserweb.com/cv/assets/css/responsive.css" rel="stylesheet">
-    <link href="http://demo.deviserweb.com/cv/assets/css/colors/lime.css" rel="stylesheet">
-    <link href="http://demo.deviserweb.com/cv/assets/css/demo.css" rel="stylesheet">
+    <link rel="stylesheet" href="./fonts/font-awesome.min.css"> 
 
-    <link href="//fonts.googleapis.com/css?family=Roboto:400,100,300,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://demo.deviserweb.com/cv/assets/icons/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
-
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script> 
-
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Cezar Guimarães Carneiro - Résumé</title>
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+     Please enable JavaScript to view this page.
     </noscript>
     <div id="root" class="container"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
