--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,13 @@
      Please enable JavaScript to view this page.
     </noscript>
     <div id="root" class="container"></div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-102023188-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
