--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,30 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="author" content="Cezar Guimarães Carneiro">
+    <meta name="description" content="Software Engineer resume">
+    <meta name="keywords" content="software engineer, software developer, full-stack developer, front-end, android, developer, resume, portfolio">
+    <meta name="robots" content="index,follow"> 
+    <meta http-equiv="cache-control" content="no-cache" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="./favicon.ico">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css"> 
-
     <link rel="stylesheet" href="./fonts/font-awesome.min.css"> 
 
     <title>Cezar Guimarães Carneiro - Résumé</title>
   </head>
   <body>
     <noscript>
-     Please enable JavaScript to view this page.
+      Cezar Guimarães Carneiro
+      <br/>
+      Software engineer with years of experience building<br/>
+      scalable applications with modern patterns and technologies.<br/>
+      Among many other technologies, I have worked with Java, JavaScript,<br/>
+      Android, AngularJS, Angular2, NoSQL, Apache Solr, etc.
+      <br/>
+      <br/>
+      <a>Please enable JavaScript and refresh to view my full resume.</a>
     </noscript>
     <div id="root" class="container"></div>
     <script>
