Alterações no nome

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Cezar Guimarães Carneiro">
+    <meta name="author" content="Felipe José Balbino">
     <meta name="description" content="Software Engineer resume">
     <meta name="keywords" content="software engineer, software developer, full-stack developer, front-end, android, developer, resume, portfolio">
     <meta name="robots" content="index,follow"> 
@@ -14,11 +14,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css"> 
     <link rel="stylesheet" href="./fonts/font-awesome.min.css"> 
 
-    <title>Cezar Guimarães Carneiro - Résumé</title>
+    <title>Felipe José Balbino - Resume</title>
   </head>
   <body>
     <noscript>
-      Cezar Guimarães Carneiro
+      Felipe José Balbino
       <br/>
       Software engineer with years of experience building<br/>
       scalable applications with modern patterns and technologies.<br/>
